--- a/Objective-C/StoreSearch/StoreSearch/Classes/Controller/SNSearchViewController.xib
+++ b/Objective-C/StoreSearch/StoreSearch/Classes/Controller/SNSearchViewController.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SNSearchViewController">
             <connections>
+                <outlet property="searchBar" destination="YAd-dg-JqU" id="BOU-uZ-BEO"/>
+                <outlet property="tableView" destination="aGq-ww-d3L" id="f4N-ZA-oZh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +16,33 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aGq-ww-d3L">
+                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="f7F-Fg-22P"/>
+                        <outlet property="delegate" destination="-1" id="5Jw-AQ-t5n"/>
+                    </connections>
+                </tableView>
+                <searchBar contentMode="redraw" placeholder="App name, artist, song, album, ebook" translatesAutoresizingMaskIntoConstraints="NO" id="YAd-dg-JqU">
+                    <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="hmk-fb-bFK"/>
+                    </connections>
+                </searchBar>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="YAd-dg-JqU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4bs-Oo-2OS"/>
+                <constraint firstAttribute="trailing" secondItem="aGq-ww-d3L" secondAttribute="trailing" id="BYE-m0-ch3"/>
+                <constraint firstItem="aGq-ww-d3L" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IEY-HB-xaP"/>
+                <constraint firstItem="YAd-dg-JqU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="ae7-tU-Kx1"/>
+                <constraint firstAttribute="trailing" secondItem="YAd-dg-JqU" secondAttribute="trailing" id="jsE-gJ-bN9"/>
+                <constraint firstAttribute="bottom" secondItem="aGq-ww-d3L" secondAttribute="bottom" id="o0X-wg-Dhh"/>
+                <constraint firstItem="aGq-ww-d3L" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="otT-VA-Q8y"/>
+            </constraints>
         </view>
     </objects>
 </document>
