--- a/Objective-C/StoreSearch/StoreSearch/Classes/View/SNSearchResultCell.xib
+++ b/Objective-C/StoreSearch/StoreSearch/Classes/View/SNSearchResultCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="storeSearchCellId" id="KGk-i7-Jjw" customClass="SNSearchResultCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SNSearchResultCell" id="KGk-i7-Jjw" customClass="SNSearchResultCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -49,6 +49,10 @@
                     <constraint firstItem="mYL-Vs-pWq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qip-Ye-GN8"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="artistNameLabel" destination="pT8-db-utE" id="eZJ-7D-vbV"/>
+                <outlet property="nameLabel" destination="PUO-L1-lga" id="0KA-oN-KQl"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
