--- a/Objective-C/StoreSearch/StoreSearch/Classes/Controller/SNSearchViewController.xib
+++ b/Objective-C/StoreSearch/StoreSearch/Classes/Controller/SNSearchViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SNSearchViewController">
             <connections>
                 <outlet property="searchBar" destination="YAd-dg-JqU" id="BOU-uZ-BEO"/>
+                <outlet property="segmentControl" destination="E3J-sQ-o5R" id="CBq-so-tOW"/>
                 <outlet property="tableView" destination="aGq-ww-d3L" id="f4N-ZA-oZh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -32,12 +33,36 @@
                         <outlet property="delegate" destination="-1" id="hmk-fb-bFK"/>
                     </connections>
                 </searchBar>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFD-ey-6aA">
+                    <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                    <items>
+                        <navigationItem id="wgY-Rm-Vhm">
+                            <nil key="title"/>
+                            <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="E3J-sQ-o5R">
+                                <rect key="frame" x="132.5" y="7" width="335" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="All"/>
+                                    <segment title="Music"/>
+                                    <segment title="Software"/>
+                                    <segment title="Audio Book"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentChange:" destination="-1" eventType="valueChanged" id="tix-O0-Ypp"/>
+                                </connections>
+                            </segmentedControl>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="YFD-ey-6aA" firstAttribute="top" secondItem="YAd-dg-JqU" secondAttribute="bottom" id="33d-gg-GPN"/>
                 <constraint firstItem="YAd-dg-JqU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4bs-Oo-2OS"/>
+                <constraint firstItem="YFD-ey-6aA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8Qe-LL-XvQ"/>
                 <constraint firstAttribute="trailing" secondItem="aGq-ww-d3L" secondAttribute="trailing" id="BYE-m0-ch3"/>
                 <constraint firstItem="aGq-ww-d3L" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IEY-HB-xaP"/>
+                <constraint firstAttribute="trailing" secondItem="YFD-ey-6aA" secondAttribute="trailing" id="Ie0-0d-FB8"/>
                 <constraint firstItem="YAd-dg-JqU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="ae7-tU-Kx1"/>
                 <constraint firstAttribute="trailing" secondItem="YAd-dg-JqU" secondAttribute="trailing" id="jsE-gJ-bN9"/>
                 <constraint firstAttribute="bottom" secondItem="aGq-ww-d3L" secondAttribute="bottom" id="o0X-wg-Dhh"/>
