--- a/Objective-C/BluetoothDev/BluetoothDev/Base.lproj/Main.storyboard
+++ b/Objective-C/BluetoothDev/BluetoothDev/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZq-DA-rQq">
-                                <rect key="frame" x="270" y="117" width="60" height="30"/>
+                                <rect key="frame" x="270" y="40" width="60" height="30"/>
                                 <state key="normal" title="蓝牙扫描"/>
                                 <connections>
                                     <action selector="blueToothAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fiv-rg-9aL"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="写入数据" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fpf-j4-JVq">
-                                <rect key="frame" x="225" y="231" width="150" height="30"/>
+                                <rect key="frame" x="225" y="100" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="dh6-xD-nkM"/>
                                 </constraints>
@@ -33,13 +33,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUz-ja-Cfd">
-                                <rect key="frame" x="150" y="333" width="300" height="20.5"/>
+                                <rect key="frame" x="150" y="160" width="300" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="WlH-yP-3iY"/>
                                     <constraint firstAttribute="height" constant="200" id="dvk-XC-154"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -48,7 +48,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PW4-M4-Qn2">
-                                <rect key="frame" x="385" y="231" width="30" height="30"/>
+                                <rect key="frame" x="385" y="100" width="30" height="30"/>
                                 <state key="normal" title="发送"/>
                                 <connections>
                                     <action selector="sendAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gvM-fe-coO"/>
@@ -59,13 +59,13 @@
                         <constraints>
                             <constraint firstItem="PW4-M4-Qn2" firstAttribute="centerY" secondItem="fpf-j4-JVq" secondAttribute="centerY" id="DnQ-Gr-Gfc"/>
                             <constraint firstItem="EZq-DA-rQq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FtN-jQ-BNm"/>
-                            <constraint firstItem="fpf-j4-JVq" firstAttribute="top" secondItem="EZq-DA-rQq" secondAttribute="bottom" constant="84" id="Lcg-GP-pBN"/>
-                            <constraint firstItem="EZq-DA-rQq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="97" id="QFc-Zn-kkd"/>
+                            <constraint firstItem="fpf-j4-JVq" firstAttribute="top" secondItem="EZq-DA-rQq" secondAttribute="bottom" constant="30" id="Lcg-GP-pBN"/>
+                            <constraint firstItem="EZq-DA-rQq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="QFc-Zn-kkd"/>
                             <constraint firstItem="wUz-ja-Cfd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="T4d-RT-Kkv"/>
                             <constraint firstItem="PW4-M4-Qn2" firstAttribute="leading" secondItem="fpf-j4-JVq" secondAttribute="trailing" constant="10" id="j0v-s9-kmZ"/>
                             <constraint firstItem="fpf-j4-JVq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rwO-Xv-44o"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wUz-ja-Cfd" secondAttribute="bottom" constant="50" id="vPi-V9-Gna"/>
-                            <constraint firstItem="wUz-ja-Cfd" firstAttribute="top" secondItem="fpf-j4-JVq" secondAttribute="bottom" constant="72" id="zl8-Pf-p8s"/>
+                            <constraint firstItem="wUz-ja-Cfd" firstAttribute="top" secondItem="fpf-j4-JVq" secondAttribute="bottom" constant="30" id="zl8-Pf-p8s"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
